--- a/pages/addCustomer/addCustomer.wxml
+++ b/pages/addCustomer/addCustomer.wxml
@@ -1,10 +1,68 @@
 <!--pages/addCustomer/chooseCustodian.wxml-->
 <cu-custom isBack="{{true}}" bgColor="bg-white" >
   <view slot="backText"></view>
-  <view slot="content">添加客户</view>
+  <view slot="content">{{title}}</view>
 </cu-custom>
 
 <form bindsubmit="submit">
+  <view class="add_container">
+    <view class="add_info">
+      <view class="detail_header">
+        <view class="detail_title">企业信息</view>
+        <view class="detail_right">
+        </view>
+      </view>
+      <view class="detail_center">
+        <view class="P5_1 app_font" style="padding-left:30rpx;color: #333333;">企业名称</view>
+        <input class='P5_2 app_font' type="text" bindinput="bindSetData1" placeholder='请填写企业名称' name="company_name" value="{{company_name}}"></input>
+      </view>
+      <view class="line"></view>
+      <view class="detail_center">
+        <view class="P5_1 app_font" style="padding-left:30rpx;color: #333333;">联系人</view>
+        <input class='P5_2 app_font' bindinput="bindSetData2" placeholder='请填写联系人姓名' type="text" name="name" value="{{name}}" ></input>
+      </view>
+      <view class="line"></view>
+      <view class="detail_center">
+        <view class="P5_1 app_font" style="padding-left:30rpx;color: #333333;">手机号</view>
+        <input class='P5_2 app_font' bindinput="bindSetData3" placeholder='请填写联系人手机号' maxlength="11"  type="number" name="phone" value="{{phone}}"></input>
+      </view>
+      <view class="line"></view>
+      <view class="detail_center">
+        <view class="P5_1 app_font" style="padding-left:30rpx;color: #333333;">所在区域</view>
+        <view class="detail_center" style="width:70%;align-items: center;padding: 0rpx 30rpx 0rpx 0rpx;">
+          <view class='P5_2 app_font' style="white-space:nowrap;width:100%;">
+            <picker class="picker_1" bindchange="bindPickerChangeArea" value="{{areaIndex}}" range-key="{{'area_name'}}" range="{{areaList}}">
+              <view class="picker">
+                {{areaList[areaIndex].area_name}}
+              </view>
+            </picker>
+          </view>
+          <image src="../../image/icon_arrow_gray.png" class='text_img' />
+        </view>
+      </view>
+      <!-- <view class="line"></view>
+      <view class="detail_center">
+        <view class="P5_1 app_font" style="padding-left:30rpx;color: #333333;padding-top:0rpx;">详细地址</view>
+        <textarea style="width: 70%;color: #333333;text-align: left;" auto-height placeholder='请填写详细地址' name="locationName"  bindinput="updateLocation" value="{{locationName}}" ></textarea>
+      </view> -->
+
+    </view>
+
+    
+  </view>
+
+  <view style="margin-top:100rpx;">
+    <button class='app_btn' style="width: 670rpx;height: 88rpx;background: {{submitState?'#999999':'#307FF5'}};border-radius: 12rpx;color:#FFFFFF;" form-type="submit" disabled="{{submitState}}">保存</button>
+  </view>
+
+</form>
+
+<view class="icon-box-ctn">
+      <icon class="weui-icon-search_in-box" type="warn" size="14" bindtap="searchHandle"/>
+      <view class="icon-box-desc">信息提交后不可修改，如需修改请联系管理员</view>
+</view>
+
+<!-- <form bindsubmit="submit">
   <view class="P5 app_flex">
     <view class="P5_1 app_font">企业名称</view>
     <input class='P5_2 app_font' bindinput="bindSetData1" placeholder='请填写企业名称' type="text" name="company_name" value="{{company_name}}"></input>
@@ -41,4 +99,4 @@
 <view class="icon-box-ctn">
       <icon class="weui-icon-search_in-box" type="warn" size="14" bindtap="searchHandle"/>
       <view class="icon-box-desc">信息提交后不可修改，如需修改请联系管理员</view>
-</view>
+</view> -->
