--- a/pages/gpsChooseCustomer/index.wxss
+++ b/pages/gpsChooseCustomer/index.wxss
@@ -77,3 +77,28 @@
   left: 75rpx;
   width: 80% !important;
 }
+
+.tip_style{
+  text-align: center;
+  margin-top: 30rpx;
+}
+.empty_view{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20rpx;
+  flex-direction: column;
+}
+
+.add_customer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 60rpx;
+  width: 280rpx;
+height: 88rpx;
+background: #307FF5;
+border-radius: 12rpx;
+font-size: 32rpx;
+color: #FFFFFF;
+}
