--- a/pages/gpsManageInstrument/index.wxss
+++ b/pages/gpsManageInstrument/index.wxss
@@ -119,3 +119,30 @@
   color: #FFFFFF;
   background: #307FF5;
 }
+
+.tip_style{
+  text-align: center;
+  margin-top: 30rpx;
+}
+
+.empty_view{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20rpx;
+  flex-direction: column;
+}
+
+.add_customer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 60rpx;
+  width: 280rpx;
+height: 88rpx;
+background: #307FF5;
+border-radius: 12rpx;
+font-size: 32rpx;
+color: #FFFFFF;
+}
+
