--- a/pages/myInfo/myInfo.wxml
+++ b/pages/myInfo/myInfo.wxml
@@ -79,7 +79,7 @@
   </view>
 </view>
   <!-- 退出 -->
-  <view style="width: 100%;padding: 30rpx;display: flex;align-items: center;justify-content: center;background-color: #F5F5F5;" >
+  <view style="width: 100%;padding: 30rpx;display: flex;align-items: center;justify-content: center;background-color: #F5F5F5;margin-top: 30rpx;" >
     <view class="app_btn" bindtap="toExit"
       style="height: 88rpx;width: 400rpx;background-color: #FFFFFF;border-radius: 12rpx;border: 1px solid #307FF5;font-size: 32rpx;color: #307FF5;">退出登录</view>
   </view>
