--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -2,7 +2,7 @@
 <cu-custom bgColor="bg-white" isBack="{{false}}" isCustom="{{isCustom}}">
   <view slot="content">我的工单</view>
 </cu-custom>
-<scroll-view scroll-x class="bg-white nav text-center"
+<scroll-view scroll-x class="bg-white nav text-center" wx:if="{{role != 2}}"
   style="background-color: #FFF;position:fixed;top:10%;z-index:9999;">
   <view class="cu-item {{index==TabCur?'text-blue cur':''}}" wx:for="{{statusList}}" wx:key bindtap="tabSelect"   data-id="{{index}}">
     {{statusList[index]}}
