--- a/pages/gpsManageInstrument/index.wxss
+++ b/pages/gpsManageInstrument/index.wxss
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  /* width: 100%; */
 }
 
 /* 搜索框提示文字样式 */
@@ -40,7 +40,7 @@
 }
 
 #search_checked{
-  width:340rpx;
+  /* width:340rpx; */
   /* text-align: center; */
 }
 
