--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -432,7 +432,7 @@ radio-group{
     box-shadow: 0px 2rpx 8rpx 0px rgba(0, 0, 0, 0.29);
     padding: 24rpx;
     position: absolute;
-    top: -170rpx;
+    bottom: 60rpx;
     left: -10rpx;
     border-radius: 6rpx;
   }
