--- a/pages/orderList/orderList.wxml
+++ b/pages/orderList/orderList.wxml
@@ -2,14 +2,14 @@
     <view slot="backText"></view>
     <view slot="content">工单列表</view>
 </cu-custom>
-<scroll-view wx:if="{{role == 1}}" scroll-x class="bg-white nav text-center" style="background-color: #FFF;position:fixed;top:11%;z-index:9999;">
+<scroll-view wx:if="{{role == 1}}" scroll-x class="bg-white nav text-center" style="background-color: #FFF;position:fixed;z-index:9999;">
   <view class="cu-item {{index==TabCur?'text-blue cur':''}}" style="border-bottom: none;" wx:for="{{statusList}}" wx:key="index" catchtap="tabSelect" data-id="{{index}}">
       <span >{{statusList[index]}}</span>
       <span wx:if="{{index!=2}}">({{orderList.length}})</span>
   </view>
 </scroll-view>
-<view class="page" style="position:absolute;top: {{role == 1 ? '16%':'11%'}};">
-    <view class="new_p1">
+<view class="page {{role == 1 ? 'page_top': ''}}">
+    <view class="new_p1" style="margin-top: {{role == 1 ? '30': '0'}}rpx;">
         <block wx:for="{{orderList}}" wx:key="index" wx:if="{{orderList.length > 0 && role != 2}}">
             <view class="new_p1_view" bindtap="toInfo" data-id = "{{item.id}}" data-type="{{item.type}}">
                 <view class="new_p2" style="align-items: center;">
