--- a/pages/detailCustomer/index.wxml
+++ b/pages/detailCustomer/index.wxml
@@ -36,9 +36,9 @@
       </view>
     </view>
     <block wx:for="{{nameList}}" wx:key="index">
-      <view class="detail_center" wx:if="{{nameList.length > 0}}">
-        <view class="detail_black" style="width:20%;">{{item.name}}</view>
-        <view class="detail_black" style="width:60%;">{{item.phone}}</view>
+      <view class="detail_center" wx:if="{{nameList.length > 0}}" style="align-items: center;">
+        <view class="detail_black" style="width:30%;">{{item.name}}</view>
+        <view class="detail_black" style="width:40%;">{{item.phone}}</view>
         <view class="detail_img" style="width:20%;" bind:tap="bindUpdateCustodian" data-name="{{item.name}}" data-phone="{{item.phone}}"><image src="../../image/icon_detail_edit_gray.png" class='detail_right_img' /></view>
       </view>
     </block>
@@ -56,8 +56,8 @@
     <block wx:for="{{instrument_result_status}}" wx:key="index" >
       <view class="detail_center_view">
         <view class="detail_center">
-          <view class="detail_black" style="width:32%;">{{item.instrument_name}}</view>
-          <view class="detail_black" style="width:50%;">{{item.instrument_SN}}</view>
+          <view class="detail_black" style="width:30%;">{{item.instrument_name}}</view>
+          <view class="detail_black" style="width:45%;">{{item.instrument_SN}}</view>
           <view class="detail_img" style="width:18%;justify-content: center;">
             <view class="detail_img" style="width:100%;justify-content: space-between;">
               <image src="../../image/icon_detail_note.png" class='detail_right_img' bind:tap="bindTagLog" data-instrumentsn="{{item.instrument_SN}}"/>
@@ -73,8 +73,8 @@
     <block wx:for="{{instrument_result_delete}}" wx:key="index" wx:if="{{instrument_result_delete.length > 0}}">
       <view class="detail_center_view">
         <view class="detail_center">
-          <view class="detail_gray" style="width:32%;">{{item.instrument_name}}</view>
-          <view class="detail_gray" style="width:50%;">{{item.instrument_SN}}</view>
+          <view class="detail_gray" style="width:30%;">{{item.instrument_name}}</view>
+          <view class="detail_gray" style="width:45%;">{{item.instrument_SN}}</view>
           <view class="detail_img" style="width:18%;">
               <image src="../../image/icon_detail_note.png" class='detail_right_img' bind:tap="bindTagLog" data-instrumentsn="{{item.instrument_SN}}"/>
           </view>
