--- a/pages/chooseSN/chooseSN.wxss
+++ b/pages/chooseSN/chooseSN.wxss
@@ -1,34 +1,51 @@
 /* pages/chooseSN/chooseSN.wxss */
+ /* 搜索框样式 */
+ .manage_search{
+  width: 100%;
+  margin-top: 40rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-
-.search {
+.search{
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content:center;
   align-items: center;
-  width: 70%;
-  height: 60rpx;
-  background-color: whitesmoke;
-  margin-top: 5%;
-  border: 1rpx solid whitesmoke;
-  border-radius: 20rpx;
-  margin-left: 120rpx;
+  width: 670rpx;
+  height: 80rpx;
+  background: #F5F5F5;
+  border-radius: 12rpx;
+  position: relative;
+}
+
+.search_view{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 100%; */
 }
 
 /* 搜索框提示文字样式 */
-.search input {
-  font-size: 27rpx;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.search .search_view input
+{
+  font-size:27rpx;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   /* padding-left:30rpx;  */
 }
-
-/* 搜索框小图标 */
-/*.weui-icon-search_in-box
-{ 
-  position: relative;
-  margin-left: 150rpx;
+.weui-icon-clear{
+  position: absolute;
+  right: 30rpx;
+  display: flex;
 }
-*/
+
+#search_checked{
+  width: 70%;
+  /* width:340rpx; */
+  /* text-align: center; */
+}
+
 .container {
   padding: 10px 20px;
   align-content: center;
@@ -107,8 +124,4 @@ checkbox选中后对勾样式
   text-align: center;
   font-size: 35rpx;
   margin-top: 50rpx;
-}
-#search_checked{
-  width:90%;
-  text-align: center;
 }
