--- a/pages/exclusiveChooseSN/exclusiveChooseSN.wxss
+++ b/pages/exclusiveChooseSN/exclusiveChooseSN.wxss
@@ -1,34 +1,50 @@
 /* pages/exclusiveChooseSN/exclusiveChooseSN.wxss */
-.search
-{
+ /* 搜索框样式 */
+ .manage_search{
+  width: 100%;
+  margin-top: 40rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search{
   display: flex;
   flex-direction: row;
-  justify-content:flex-end;
+  justify-content:center;
   align-items: center;
-  width:70%;
-  height:60rpx;
-  background-color:whitesmoke;
-  margin-top: 5%;
-  border:1rpx solid whitesmoke;
-  border-radius: 20rpx;
-   margin-left: 120rpx; 
+  width: 670rpx;
+  height: 80rpx;
+  background: #F5F5F5;
+  border-radius: 12rpx;
+  position: relative;
+}
+.search_view{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 100%; */
 }
 
 /* 搜索框提示文字样式 */
-.search input
+.search .search_view input
 {
   font-size:27rpx;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   /* padding-left:30rpx;  */
 }
-
-/* 搜索框小图标 */
-/*.weui-icon-search_in-box
-{ 
-  position: relative;
-  margin-left: 150rpx;
+.weui-icon-clear{
+  position: absolute;
+  right: 30rpx;
+  display: flex;
 }
-*/
+
+#search_checked{
+  width: 70%;
+  /* width:340rpx; */
+  /* text-align: center; */
+}
+
 .container{
   padding: 10px 20px;
   align-content: center;
@@ -39,39 +55,8 @@
   border-bottom: 1rpx solid #F5F5F5;
   background-color: #FFFFFF
 }
-/*全选checkbox*/
-.bottom_1{
-  background-color: #FFFFFF;
-  position: fixed;
-  bottom: 35rpx;
-  left: 40rpx;
-  width: 20% !important;
-}
-/*添加仪器按钮*/
-.button-bottom_1{
-  background-color: #FFFFFF;
-  color:#1673EC;
-  position: fixed;
-  bottom: 20rpx;
-  left: 215rpx;
-  width: 35% !important;
-  border: 1rpx solid #1673EC;
-}
-/*完成按钮*/
-.button-bottom_2{
-  background-color: #1673EC;
-  color:#FFFFFF;
-  position: fixed;
-  bottom: 20rpx;
-  left: 510rpx;
-  width: 30% !important;
-  border: 1rpx solid #1673EC;
-}
-.search_close{
-  position: absolute;
-  margin-left: 530rpx;
-}
-#search_checked{
-  width:90%;
+
+.tip_style{
   text-align: center;
+  margin-top: 30rpx;
 }
