--- a/pages/recordInfoLog/index.wxss
+++ b/pages/recordInfoLog/index.wxss
@@ -52,13 +52,14 @@ page{
 }
 
 .img_container {
-  margin-top: 29rpx;
+  /* margin-top: 29rpx; */
 }
 .pic {
-  width: 200rpx;
-  height: 200rpx;
+  width: 160rpx;
+  height: 160rpx;
   /* background: #ffcb00; */
   margin-right: 19rpx;
+  margin-top: 30rpx;
 }
 .img_container > .pic:nth-child(3n) {
   margin-right: 0;
