--- a/pages/tagsLog/index.wxml
+++ b/pages/tagsLog/index.wxml
@@ -8,7 +8,7 @@
 <view class="detail_container">
   <view class='class_view'> 
     <view> 
-      <block wx:for="{{service_result}}" wx:key="{{index}}" wx:for-item="item" wx:if="{{service_result.length > 0}}"> 
+      <block wx:for="{{service_result}}" wx:key="index" wx:if="{{service_result.length > 0}}"> 
         <view class='view_container'> 
           <view class='circle_container'> 
             <view class='title_black'>{{tools.timeString(item.alter_time)}}</view> 
@@ -20,9 +20,11 @@
                 <view id='schedule'>
                   <view wx:if="{{item.instrument_name}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">仪器类型：{{item.instrument_name}}</view>
                   <view wx:if="{{item.instrument_attribute}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">设备属性：{{item.instrument_attribute}}</view> 
-                  <view wx:if="{{item.instrument_attribute_old}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">原设备属性：{{item.instrument_attribute_old}}</view>
-                  <view wx:if="{{item.instrument_SN && (item.instrument_SN != item.instrument_SN_old)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">{{ tools.subStringName(item.alter_type) == 0 ? '仪器序列号：':'替换仪器：'}}{{item.instrument_SN}}</view>
+                  <view wx:if="{{item.instrument_attribute_old && (item.instrument_attribute_old != item.instrument_attribute)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">原设备属性：{{item.instrument_attribute_old}}</view>
+                  <view wx:if="{{item.instrument_SN}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">{{ (tools.subStringName(item.alter_type) == 1 && item.instrument_SN != item.instrument_SN_old) ? '替换仪器：':'仪器序列号：'}}{{item.instrument_SN}}</view>
                   <view wx:if="{{item.instrument_SN_old && (item.instrument_SN != item.instrument_SN_old)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">被替换仪器：{{item.instrument_SN_old}}</view>
+                  <view wx:if="{{item.company_name && (tools.subStringName(item.alter_type) == 3)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">客户名称：{{item.company_name}}</view>
+                  <view wx:if="{{item.company_name_old && (tools.subStringName(item.alter_type) == 3)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">原客户名称：{{item.company_name_old}}</view>
                   <view wx:if="{{item.alter_person_name}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">{{tools.subStringName(item.alter_type) == 0 ? '创建人员：':'修改人员：'}}{{item.alter_person_name}}</view>
                   <view style="height: 40rpx;"></view>
                 </view>
