--- a/pages/orderList/orderList.wxml
+++ b/pages/orderList/orderList.wxml
@@ -18,7 +18,7 @@
                         <view class="new_p2_title">{{item.service_type}}</view>
                         <view class="new_p2_type" wx:if="{{item.is_send_order == 1}}">派单</view>
                     </view>
-                    <view class="new_p2_status">{{item.status == 1 ? '进行中' : item.status == 2 ? '已完成' : '待接单'}}</view>
+                    <view class="new_p2_status">{{item.status == 0 ? '待接单' : item.status == 1 ? '进行中' : item.status == 2 ? '已完成' : item.status == 4 ? '已取消' : item.status == 5 ? '已关闭' : ''}}</view>
                 </view>
 
                 <view class="new_p2" style="margin-top:30rpx;">
