--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -43,18 +43,30 @@
                 <view class="new_line"></view>
 
                 <view class="new_p3" wx:if="{{role == 0 && item.status == 1}}">
-                    <view class="new_p3_more_view"></view>
-                    <view class="new_p3_right">
-                      <view class="new_p3_2" wx:if="{{item.is_send_order != 1}}" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
-                      <view class="new_p3_2" wx:if="{{item.is_send_order != 1 && item.allow_update==0}}" catch:tap="bindUpdateOrder" data-id="{{item.id}}" data-ordernum="{{item.order_num}}">修改工单</view>
-                      <view class="new_p3_1" catch:tap="formSubmit" data-value="2" data-id="{{item.id}}" data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
-                    </view>
+                    <block wx:if="{{item.is_send_order != 1}}">
+                      <view class="new_p3_more_view"></view>
+                      <view class="new_p3_right">
+                        <view class="new_p3_2" wx:if="{{item.creator_id!=userInfoID}}" catch:tap="bindCancleOrder" data-id="{{item.id}}">取消工单</view>
+                        <view class="new_p3_2" wx:if="{{item.creator_id==userInfoID}}" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
+                        <view class="new_p3_2" wx:if="{{item.allow_update==0}}" catch:tap="bindUpdateOrder" data-id="{{item.id}}" data-ordernum="{{item.order_num}}">修改工单</view>
+                        <view class="new_p3_1" catch:tap="formSubmit" data-value="2" data-id="{{item.id}}" data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
+                      </view>
+                    </block>
+
+                    <block wx:if="{{item.is_send_order == 1}}">
+                      <view class="new_p3_more_view"></view>
+                      <view class="new_p3_right">
+                        <view class="new_p3_2" catch:tap="bindCancleOrder" data-id="{{item.id}}">取消工单</view>
+                        <view class="new_p3_1" catch:tap="formSubmit" data-value="2" data-id="{{item.id}}" data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
+                      </view>
+                    </block>
                 </view>
 
                 <view class="new_p3" wx:if="{{role == 1 && item.status == 1}}">
                     <view class="new_p3_more_view"></view>
                     <view class="new_p3_right">
-                      <view class="new_p3_2" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
+                      <view class="new_p3_2" wx:if="{{item.creator_id!=userInfoID}}" catch:tap="bindCancleOrder" data-id="{{item.id}}">取消工单</view>
+                      <view class="new_p3_2" wx:if="{{item.creator_id==userInfoID}}" catch:tap="bindCloseOrder" data-id="{{item.order_num}}">关闭工单</view>
                       <view class="new_p3_2" catch:tap="bindUpdateOrder" data-id="{{item.id}}" data-ordernum="{{item.order_num}}">修改工单</view>
                       <view class="new_p3_1" catch:tap="formSubmit" data-value="2" data-id="{{item.id}}"  data-feedback="{{item.processing_feedback}}" data-scenepic="{{item.scene_pic}}">完成服务</view>
                     </view>
